--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#features">Features</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -44,9 +44,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Welcome to LibreNMS, a fully featured network monitoring system that provides a wealth of features and device support.</div>
+                <div class="intro-heading">Have a look around and what we can do.</div>
+                <a href="#features" class="page-scroll btn btn-xl">What can it do?</a>
             </div>
         </div>
     </header>
