--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
+    {% include features.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
     {% include team.html %}
