Trying to sort header out

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -257,6 +257,11 @@ fieldset[disabled] .btn-xl.active {
         background-color: #222;
     }
 
+    .navbar-default.navbar-black {
+        padding: 10px 0;
+        background-color: #222;
+    }
+
     .navbar-default.navbar-shrink .navbar-brand {
         font-size: 1.5em;
     }
