--- a/_includes/features.html
+++ b/_includes/features.html
@@ -33,5 +33,31 @@
                     <p class="text-muted">A full API to manage, graph and retrieve data from your install.</p>
                 </div>
             </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Auto discovery</h4>
+                    <p class="text-muted">Auto discovery your entire network using CDP, FDP, LLDP, OSPF, BGP, SNMP and ARP.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-bell fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Customisable alerting</h4>
+                    <p class="text-muted">Highly flexible alerting system, notify via email, irc, slack and more.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">API Access</h4>
+                    <p class="text-muted">A full API to manage, graph and retrieve data from your install.</p>
+                </div>
+            </div>
         </div>
     </section>
