--- a/_includes/features.html
+++ b/_includes/features.html
@@ -37,26 +37,26 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Auto discovery</h4>
-                    <p class="text-muted">Auto discovery your entire network using CDP, FDP, LLDP, OSPF, BGP, SNMP and ARP.</p>
+                    <h4 class="service-heading">Billing system</h4>
+                    <p class="text-muted">Generate bandwidth bills for ports on your network based on usage or transfer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-bell fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cloud-download fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Customisable alerting</h4>
-                    <p class="text-muted">Highly flexible alerting system, notify via email, irc, slack and more.</p>
+                    <h4 class="service-heading">Auto-update system</h4>
+                    <p class="text-muted">Stay upto date automatically with bug fixes, new features and more.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-plug fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">API Access</h4>
-                    <p class="text-muted">A full API to manage, graph and retrieve data from your install.</p>
+                    <h4 class="service-heading">Plugin system</h4>
+                    <p class="text-muted">Plugin system that enables you to extend your install for your needs.</p>
                 </div>
             </div>
         </div>
