--- a/_includes/features.html
+++ b/_includes/features.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-server fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Auto discovery</h4>
                     <p class="text-muted">Auto discovery your entire network using CDP, FDP, LLDP, OSPF, BGP, SNMP and ARP.</p>
