--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,4 +1,4 @@
-<!-- Services Section -->
+<!-- Features Section -->
     <section id="features">
         <div class="container">
             <div class="row">
