--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     {% include header.html %}
     {% include features.html %}
-    {% include portfolio_grid.html %}
+    {% include try.html %}
     {% include about.html %}
     {% include team.html %}
     {% include clients.html %}
