--- a/_includes/try.html
+++ b/_includes/try.html
@@ -1,5 +1,5 @@
 <!-- Try Section -->
-    <section id="about">
+    <section id="try">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
