--- a/_includes/try.html
+++ b/_includes/try.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-4 col-sm-4">
-                                <button type="submit" class="btn btn-default btn-block" name="submit" type="submit">Login</button>
+                                <button type="submit" class="page-scroll btn btn-xl" name="submit" type="submit">Login</button>
                             </div>
                         </div>
                     </form>
