--- a/_includes/try.html
+++ b/_includes/try.html
@@ -5,6 +5,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Try</h2>
                     <h3 class="section-subheading text-muted">An online demo is available for you to try before installing.</h3>
+                    <h3 class="section-subheading text-muted">You can login to the demo at <a href="http://demo.librenms.org">demo.librenms.org</a> or click 'Login' below.</h3>
+                    <h3 class="section-subheading text-muted">Username: admin / Password: admin.</h3>
                 </div>
             </div>
             <div class="row">
@@ -12,12 +14,12 @@
                     <form class="form-horizontal" role="form" action="http://demo.librenms.org" method="post" name="logonform">
                         <div class="form-group">
                             <div class="col-sm-offset-4 col-sm-4">
-                                <input type="text" name="username" id="username" class="form-control" placeholder="Username" required autofocus />
+                                <input type="text" name="username" id="username" class="form-control" placeholder="Username" required autofocus value="admin" />
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-4 col-sm-4">
-                                <input type="password" name="password" id="password" class="form-control" placeholder="Password" />
+                                <input type="password" name="password" id="password" class="form-control" placeholder="Password" value="admin" />
                             </div>
                         </div>
                         <div class="form-group">
