Added downloads page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% include header.html %}
     {% include features.html %}
     {% include try.html %}
-    {% include about.html %}
+    {% include downloads.html %}
     {% include team.html %}
     {% include clients.html %}
     {% include contact.html %}
