--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -28,14 +28,14 @@
                         </div>
                     </div>
                     <strong>VirtualBox Appliance</strong><br />
-                    <p><a href="http://lathwood.uk/ubuntu-librenms.tgz">Ubuntu 14.04.1 LTS tarball.</a><br />
+                    <p><a href="http://lathwood.uk/ubuntu-librenms.tgz">Ubuntu 14.04.1 LTS tarball</a><br />
                     md5sum: 11d32bda31857ccb653a45ccecede286<br />
                     sha256sum: b28e27f91498e7ced93e704500361f09e02a607d22a05d2dd6b98d6b0643fe59<br /></p>
-                    <p><a href="http://lathwood.uk/ubuntu-librenms.zip">Ubuntu 14.04.1 LTS zip.</a><br />
+                    <p><a href="http://lathwood.uk/ubuntu-librenms.zip">Ubuntu 14.04.1 LTS zip</a><br />
                     md5sum: 80b80830b674a3322d347d1f98d30732<br />
                     sha256sum: 40cc9994442d895794d4f3b9cfd479bdf04f86788ed3d20dd6915a3ee634339f<br /></p>
                     <strong>VMWare image</strong><br />
-                    <p><a href="http://lathwood.uk/ubuntu-librenms.vmdk">Ubuntu 14.04.1 LTS vmdk.</a><br />
+                    <p><a href="http://lathwood.uk/ubuntu-librenms.vmdk">Ubuntu 14.04.1 LTS vmdk</a><br />
                     md5sum: e7beb46967ecf954a0c5c90e449c8758<br />
                     sha256sum: 0e497b8d0c458b629a761cf219000be04088118bfaf6ab302c375a9f711daa83<br /></p>
                     <div class="alert alert-warning">MySQL login details are already set and can be found in config.php. The password for the LibreNMS username is the same as for the root MySQL password. We highly advise that you change this asap.<br /></div>
