--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="changelog.html">Changelog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
