--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,38 +3,19 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
+                            <p>We have a few ways to get in touch, the most responsive and widely used is our irc channel which is located on the Freenode network (chat.freenode.net) under the ##librenms channel.</p>
+                            <p>However feel free to get in touch with via:</p>
+                            <ul>
+                                <li><a href="https://groups.google.com/forum/#!forum/librenms-project" taget="_blank">Google groups</a></li>
+                                <li><a href="https://twitter.com/librenms" target="_blank">Twitter</a></li>
+                                <li><a href="https://github.com/librenms/librenms/issues" target="_blank">GitHub Issues</a></li>
+                            </ul>
                         </div>
                     </form>
                 </div>
