--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,8 +9,8 @@
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <p class="header">We have a few ways to get in touch, the most responsive and widely used is our irc channel which is located on the Freenode network (chat.freenode.net) under the ##librenms channel.</p>
-                            <p class="header">However feel free to get in touch with via:</p>
+                            <p class="contact-text">We have a few ways to get in touch, the most responsive and widely used is our irc channel which is located on the Freenode network (chat.freenode.net) under the ##librenms channel.</p>
+                            <p class="contact-text">However feel free to get in touch with via:</p>
                             <ul>
                                 <li><a href="https://groups.google.com/forum/#!forum/librenms-project" taget="_blank">Google groups</a></li>
                                 <li><a href="https://twitter.com/librenms" target="_blank">Twitter</a></li>
