--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="changelog.html">Changelog</a>
+                        <a href="change-log.html">Changelog</a>
                     </li>
                 </ul>
             </div>
