--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
     {% include try.html %}
     {% include downloads.html %}
     {% include team.html %}
-    {% include clients.html %}
     {% include contact.html %}
+    {% include changelog.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
