--- a/_layouts/changelog.html
+++ b/_layouts/changelog.html
@@ -1,5 +1,15 @@
----
-layout: changelog
----
+<!DOCTYPE html>
+<html>
 
-{{ content }}
+  {% include head.html %}
+
+
+    <body id="page-top" class="index">
+
+    {% include changelog.html %}
+    {% include footer.html %}
+    {% include modals.html %}
+    {% include js.html %}
+
+    </body>
+</html>
