--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
+    {% include index.html %}
     {% include features.html %}
     {% include try.html %}
     {% include downloads.html %}
