--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,4 +1,9 @@
     <!-- Header -->
+    <div class="row">
+        <div class="col-lg-12">
+            <br />
+        </div>
+    </div>
     <header>
         <div class="container">
             <div class="intro-text">
