--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/">{{site.title}}</a>
+                <a class="navbar-brand page-scroll" href="{{site.baseurl}}">{{site.title}}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,22 +19,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#features">Features</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/#features">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#try">Try</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/#try">Try</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#downloads">Downloads</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/#downloads">Downloads</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="changelog.html">Changelog</a>
+                        <a href="{{site.baseurl}}/changelog/">Changelog</a>
                     </li>
                 </ul>
             </div>
