--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,22 +19,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{site.baseurl}}/#features">Features</a>
+                        <a class="page-scroll" href="#features">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{site.baseurl}}/#try">Try</a>
+                        <a class="page-scroll" href="#try">Try</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{site.baseurl}}/#downloads">Downloads</a>
+                        <a class="page-scroll" href="#downloads">Downloads</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{site.baseurl}}/#team">Team</a>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{site.baseurl}}/#contact">Contact</a>
-                    </li>
-                    <li>
-                        <a href="{{site.baseurl}}/changelog/">Changelog</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
