--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,15 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">Welcome to LibreNMS, a fully featured network monitoring system that provides a wealth of features and device support.</div>
+                <a href="#features" class="page-scroll btn btn-xl">What can it do?</a>
+            </div>
+        </div>
+    </header>
 
 <!--
         {% for page in site.pages %}
