--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -291,7 +291,6 @@ header .intro-text .intro-lead-in {
     font-size: 22px;
     font-style: italic;
     line-height: 22px;
-    color: #000;
 }
 
 header .intro-text .intro-heading {
@@ -661,7 +660,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url(../img/map-image.png);
+    background-image: url(img/map-image.png);
     background-position: center;
     background-repeat: no-repeat;
 }
