--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -867,3 +867,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
 }
+
+contact-text {
+    color: #fff;
+}
