--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,10 +28,10 @@
                         <a class="page-scroll" href="#downloads">Downloads</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a href="http://blog.librenms.org">Blog</a>
                     </li>
                 </ul>
             </div>
