--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
     {% include features.html %}
     {% include try.html %}
     {% include downloads.html %}
-    {% include team.html %}
-    {% include contact.html %}
+    {% include support.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
