--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                         <a class="page-scroll" href="#downloads">Downloads</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#support">Support</a>
                     </li>
                     <li>
                         <a href="http://blog.librenms.org">Blog</a>
