--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,9 @@
                         <a class="page-scroll" href="#support">Support</a>
                     </li>
                     <li>
+                        <a href="http://docs.librenms.org">Docs</a>
+                    </li>
+                    <li>
                         <a href="http://blog.librenms.org">Blog</a>
                     </li>
                 </ul>
