--- a/_includes/support.html
+++ b/_includes/support.html
@@ -6,6 +6,32 @@
                     <h3 class="section-subheading text-muted">We have a few ways to get in touch, the most responsive and widely used is our irc channel.</h3>
                 </div>
             </div>
+            <div class="row text-center">
+                <a href="http://webchat.freenode.net/?channels=##librenms">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-wechat fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">IRC - chat.freenode.net ##librenms</h4>
+                </div>
+                </a>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-bell fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Google Groups</h4>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">API Access</h4>
+                    <p class="text-muted">A full API to manage, graph and retrieve data from your install.</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <ul>
