--- a/_includes/support.html
+++ b/_includes/support.html
@@ -13,33 +13,55 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-wechat fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">IRC - chat.freenode.net ##librenms</h4>
+                    <h4 class="service-heading">IRC - chat.freenode.net<br />##librenms</h4>
                 </div>
                 </a>
                 <div class="col-md-4">
+                    <a href="https://groups.google.com/forum/#!forum/librenms-project">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-bell fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-google fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Google Groups</h4>
+                    </a>
                 </div>
+                <div class="col-md-4">
+                    <a href="https://github.com/librenms/librenms/issues">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">GitHub Issues</h4>
+                    </a>
+                </div>
+            </div>
+            <div class="row text-center">
+                <a href="https://twitter.com/librenms">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">API Access</h4>
-                    <p class="text-muted">A full API to manage, graph and retrieve data from your install.</p>
+                    <h4 class="service-heading">Twitter @librenms</h4>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul>
-                        <li><a href="http://webchat.freenode.net/?channels=##librenms">IRC - chat.freenode.net ##librenms</a></li>
-                        <li><a href="https://groups.google.com/forum/#!forum/librenms-project" taget="_blank">Google groups</a></li>
-                        <li><a href="https://twitter.com/librenms" target="_blank">Twitter</a></li>
-                        <li><a href="https://github.com/librenms/librenms/issues" target="_blank">GitHub Issues</a></li>
-                    </ul>
+                </a>
+                <div class="col-md-4">
+                    <a href="http://docs.librenms.org">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Online Docs</h4>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="http://docs.librenms.org/Support/FAQ/">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-question fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">FAQs</h4>
+                    </a>
                 </div>
             </div>
         </div>
