--- a/_includes/support.html
+++ b/_includes/support.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-wechat fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">IRC - chat.freenode.net<br />##librenms</h4>
+                    <h4 class="service-heading">IRC - Freenode<br />##librenms</h4>
                 </div>
                 </a>
                 <div class="col-md-4">
