--- a/_includes/features.html
+++ b/_includes/features.html
@@ -59,5 +59,31 @@
                     <p class="text-muted">Plugin system that enables you to extend your install for your needs.</p>
                 </div>
             </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <ul>
+                        <li>Extensive device support</li>
+                        <li>Mobile friendly Web UI</li>
+                        <li>Unix Agent</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <p class="text-muted">Integration support for:</p>
+                    <ul>
+                        <li><a href="http://nfsen.sourceforge.net/" target="_blank">NfSen</a></li>
+                        <li><a href="https://collectd.org/" target="_blank">collectd</a></li>
+                        <li><a href="http://oss.oetiker.ch/smokeping/" target="_blank">SmokePing</a></li>
+                        <li><a href="http://www.shrubbery.net/rancid/" target="_blank">RANCID</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <p class="text-muted">Multiple authentication methods:</p>
+                    <ul>
+                        <li>MySQL</li>
+                        <li>HTTP</li>
+                        <li>LDAP</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
