--- a/_includes/support.html
+++ b/_includes/support.html
@@ -7,7 +7,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <a href="http://webchat.freenode.net/?channels=##librenms">
+                <a href="http://webchat.freenode.net/?channels=##librenms" target="_blank">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -17,7 +17,7 @@
                 </div>
                 </a>
                 <div class="col-md-4">
-                    <a href="https://groups.google.com/forum/#!forum/librenms-project">
+                    <a href="https://groups.google.com/forum/#!forum/librenms-project" target="_blank">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-google fa-stack-1x fa-inverse"></i>
@@ -26,7 +26,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://github.com/librenms/librenms/issues">
+                    <a href="https://github.com/librenms/librenms/issues" target="_blank">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <a href="https://twitter.com/librenms">
+                <a href="https://twitter.com/librenms" target="_blank">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -46,7 +46,7 @@
                 </div>
                 </a>
                 <div class="col-md-4">
-                    <a href="http://docs.librenms.org">
+                    <a href="http://docs.librenms.org" target="_blank">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
@@ -55,7 +55,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="http://docs.librenms.org/Support/FAQ/">
+                    <a href="http://docs.librenms.org/Support/FAQ/" target="_blank">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-question fa-stack-1x fa-inverse"></i>
