--- a/_includes/features.html
+++ b/_includes/features.html
@@ -59,8 +59,9 @@
                     <p class="text-muted">Plugin system that enables you to extend your install for your needs.</p>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-4">
+                    <p class="text-muted">More....</p>
                     <ul>
                         <li>Extensive device support</li>
                         <li>Mobile friendly Web UI</li>
